--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </ul>  
     <ol>
     <h4>These are some of the soft skills I beleive am gonna achieve</h4>
-    <li>Creativitity</li>
-    <li>Programmiming Languages</li> 
+    <li>Creativity</li>
+    <li>Programming Languages</li> 
     <li>Networking</li>
     <li>Feedback</li>
     <li>Entrepreneurship skills</li>   
