Added a style,css file and linked pages

--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
+    <link rel ="stylesheet" href = "style.css">
+<style>
+    h3{
+        color:rgb(185, 8, 8);
+        background-color:rgb(39, 184, 78);
+    }
+</style>
 </head>
 <body>
-    <h1>Tronella | Learning Web Development</h1>
+    <!-- This is my first comment -->
+     <!-- Had to first highlight the text then use "Ctr + /" to comment -->
+    <h1 style="color:rgb(41, 19, 205);"> Tronella | Learning Web Development</h1>
     <h2>Hi, I'm Tronella BM</h2>
     <h3>About me</h3>
     <h4>Today I am learning HTML at Codequeen</h4>
-    <h4>am in the 15th cohort of the codequeen training and I look forward to improving
-         my skills and connecting with new people that are part of this training.</h5>
-    <h4>And today is Day one:Learning Html for the project</H5>
-        <p>So far things have been great during the short period I have been here.One of our facilitators is quite funny and if you are dozing right now, you are in the wrong place.</p>
+    <h4>Am in the 15th cohort of the codequeen training and I look forward to improving
+         my IT skills and connecting with new people that are part of this training.</h5>
+    <h4>Day one:Learning Html for the project</H5>
+        <p style="background-color: beige; color: black;">So far things have been great during the short period I have been here.One of our facilitators is quite funny and if you are dozing right now, you are in the wrong place.</p>
     <ul>
     <h4>During these three months of training, the programming languages below will be taught.</h4>    
     <li>HTML</li>
@@ -22,9 +31,9 @@
         
     </ul>  
     <ol>
-    <h4>These are some of the soft skills I beleive am gonna achieve</h4>
+    <h4>These are some of the soft skills I believe am gonna achieve</h4>
     <li>Creativitity</li>
-    <li>Programmiming Languages</li> 
+    <li>Programming Languages</li> 
     <li>Networking</li>
     <li>Feedback</li>
     <li>Entrepreneurship skills</li>   
