Added portfoli.html file

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>My First Website</title>
     <link rel ="stylesheet" href = "style.css">
 <style>
+
     h3{
         color:rgb(185, 8, 8);
         background-color:rgb(39, 184, 78);
+    }
+    p{
+        font-size: medium;
+        font-style: italic;
     }
 </style>
 </head>
@@ -18,26 +23,20 @@
     <h1 style="color:rgb(41, 19, 205);"> Tronella | Learning Web Development</h1>
     <h2>Hi, I'm Tronella BM</h2>
     <h3>About me</h3>
-    <h4>Today I am learning HTML at Codequeen</h4>
-    <h4>Am in the 15th cohort of the codequeen training and I look forward to improving
-         my IT skills and connecting with new people that are part of this training.</h5>
+    <h4>I am learning HTML, CSS, and JavaScript through the CodeQueen training program.</h4>
+    <h4>Currently in the 15th CodeQueen cohort,I look forward to improving my IT skills and connecting with fellow trainees.</h5>
     <h4>Day one:Learning Html for the project</H5>
         <p style="background-color: beige; color: black;">So far things have been great during the short period I have been here.One of our facilitators is quite funny and if you are dozing right now, you are in the wrong place.</p>
     <ul>
     <h4>During these three months of training, the programming languages below will be taught.</h4>    
-    <li>HTML</li>
-    <li>JavaScript</li>
-    <li>CSS</li>
-        
+    <li class="html">HTML</li>
+    <li class="javascript">JavaScript</li>
+    <li class="css">CSS</li>    
     </ul>  
-    <ol>
-<<<<<<< HEAD
-    <h4>These are some of the soft skills I believe am gonna achieve</h4>
-    <li>Creativitity</li>
-=======
-    <h4>These are some of the soft skills I beleive am gonna achieve</h4>
+
+     <h4>These are some of the soft skills I believe am gonna achieve</h4>
+      <ol class="skills">
     <li>Creativity</li>
->>>>>>> 9eab63b136fdd2f4f09a3739cb4c6f214ea580d4
     <li>Programming Languages</li> 
     <li>Networking</li>
     <li>Feedback</li>
