--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Output</title>
+  <meta charset="UTF-8">
+  <title>My Profile | Tronella Bogere</title>
+
+  <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
-    
+
+  <div class="box">
+    <h1>Hello, I’m Tronella </h1>
+  <img src="image/Ella's image.png" alt="My Image=" height="100px" width="100px">
+    <p class="intro">
+      I am a passionate web development trainee currently learning HTML, CSS,
+      and JavaScript through the Code Queen program at NIIH Uganda.
+    </p>
+
+    <a href="https://github.com/TronellaBogere" class="btn">Discover My Journey</a>
+
+    <div class="division">
+      <h2>Web Development</h2>
+      <p>
+        I am building a strong foundation in web development, focusing on
+        creating clean, responsive, and user-friendly websites.
+      </p>
+    </div>
+
+    <div class="division">
+      <h2>Frontend Skills</h2>
+      <p>
+        I enjoy turning ideas into visually appealing web pages using HTML
+        for structure and CSS for styling.
+      </p>
+    </div>
+
+    <div class="division">
+      <h2>Learning Journey</h2>
+      <p>
+        Through hands-on practice and continuous learning, I am growing my
+        confidence and skills to become a professional frontend developer.
+      </p>
+    </div>
+
+    <h3>Connect with Me</h3>
+    <ul class="socials">
+      <li><a href="https://github.com/TronellaBogere">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/tronella-bogere-8b58662a4/">LinkedIn</a></li>
+      <li><a href="btronella@gmail.com">Email</a></li>
+    </ul>
+  </div>
+
 </body>
 </html>
