--- a/index.html
+++ b/index.html
@@ -138,8 +138,14 @@
 
 </form> 
 
-
-
+<p id="sample">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui sequi quaerat 
+    doloremque unde totam nostrum expedita repellat reprehenderitquia iusto aut fuga,
+     reiciendis nesciunt harum deleniti aliquid sapiente quibusdam accusamus.
+    </p>
+<p class = "line">
+    The box model entails the content, boader, padding ang margin
+</p>
 
 
 
