Worked on the Flex box

--- a/sample.html
+++ b/sample.html
@@ -5,16 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
     <link rel ="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
         <p>
+            <!-- red container -->
             This is my page.
         </p>
         <div class="childContainer">
             <div><p>Icon</p></div>
             <div><p>Menu</p></div>
         </div>
+        <!-- blue container -->
+        <div class="blue-container">
+            <div class="flex-items">Item 1</div>
+            <div class="flex-items">Item 2</div>
+            <div class="flex-items">Item 3</div>
+            <div class="flex-items">Item 3</div>
+        </div>
+        
+        <i class="fa-brands fa-youtube mine"></i>
+        <i class="fa-brands fa-instagram insta"></i>
+        <i class="fa-brands fa-facebook face"></i>
+        <i class="fa-brands fa-linkedin linked"></i>
+
+        <!-- last container -->
+         <div>
+
+         </div>
     </div>
 
 
